[Mrugan Kulkarni]: implemented virtual gold, physical gold and transaction APIs with Swagger and controller unit tests